svg bug on mobile patched

--- a/styles/Accueil.module.scss
+++ b/styles/Accueil.module.scss
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .content {
