--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -4,6 +4,8 @@
 .container {
   @include mixins.container;
   background: colors.$backgroundColor-purple;
+  width: 100vw;
+  height: 100vw;
   overflow: hidden;
   display: grid;
   grid-template-columns: 1fr;
